[gd_scene load_steps=12 format=2]

[ext_resource path="res://nodes/MissionSelect.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/ReturnButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/missions/HillsMission.gd" type="Script" id=3]
[ext_resource path="res://sprites/textiletex.jpg" type="Texture" id=4]
[ext_resource path="res://sprites/BG/9rectPanel.png" type="Texture" id=5]
[ext_resource path="res://sprites/rocktex.png" type="Texture" id=6]
[ext_resource path="res://sprites/BG/IconDiscBWTex.png" type="Texture" id=7]
[ext_resource path="res://sprites/Icons/64x64px/torch.png" type="Texture" id=8]
[ext_resource path="res://sprites/Icons/128x128px/cave.png" type="Texture" id=9]
[ext_resource path="res://fonts/BuildTabTheme.tres" type="Theme" id=10]
[ext_resource path="res://scripts/animate/NodeAnimated.gd" type="Script" id=11]

[node name="Hills" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 0.454902, 0.109804, 0.109804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = 16.0
margin_bottom = -112.0

[node name="Explore" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_left = 104.0
margin_top = 34.0
margin_right = 984.0
margin_bottom = 162.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 6
custom_constants/separation = 32

[node name="ExplorationProgress" type="TextureProgress" parent="VBoxContainer/Explore"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 128.0
rect_min_size = Vector2( 720, 128 )
value = 70.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 5 )
tint_under = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
tint_over = Color( 1, 1, 1, 0.25098 )
tint_progress = Color( 1, 0.486275, 0, 1 )
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Explore/ExplorationProgress"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -64.0
margin_bottom = 64.0
texture = ExtResource( 9 )

[node name="LabelProgress" type="Label" parent="VBoxContainer/Explore/ExplorationProgress"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -64.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1/3"
align = 1
valign = 1

[node name="LabelTime" type="Label" parent="VBoxContainer/Explore/ExplorationProgress"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0:20"
align = 1
valign = 1

[node name="ExploreButton" type="TextureButton" parent="VBoxContainer/Explore"]
self_modulate = Color( 1, 0.486275, 0, 1 )
margin_left = 752.0
margin_right = 880.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 7 )
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Explore/ExploreButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="Resources" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 200.0
margin_right = 1088.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
__meta__ = {
"_editor_description_": ""
}

[node name="Rock" parent="VBoxContainer/Resources" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_top = 64.0
margin_right = 640.0
margin_bottom = 327.0

[node name="CopperOre" parent="VBoxContainer/Resources" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 229.0
margin_top = 92.0
margin_right = 421.0
margin_bottom = 355.0

[node name="Coal" parent="VBoxContainer/Resources" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 311.0
margin_top = 92.0
margin_right = 503.0
margin_bottom = 355.0

[node name="TinOre" parent="VBoxContainer/Resources" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 448.0
margin_top = 92.0
margin_right = 640.0
margin_bottom = 355.0

[node name="IronOre" parent="VBoxContainer/Resources" instance=ExtResource( 1 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 721.0
margin_top = 92.0
margin_right = 913.0
margin_bottom = 355.0

[node name="Return" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="VBoxContainer/Explore/ExploreButton" to="." method="_on_Explore_Button_pressed"]
[connection signal="pressed" from="Return/Button" to="." method="_on_Return_Button_pressed"]

[editable path="Return"]
